--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <a href="#" class="">Contact Us</a>
     </header>   
     <main>
-        <section class="banner">
+        <section class="slyder">
             <div>
-                <p class="number">01</p>
+                <p class="counter">01</p>
                 <ul>
                     <li></li>
                     <li></li>
@@ -40,7 +40,7 @@
                 <a href="#" class="button">EXPLORE NOW</a>
             </div>
             <div>Free (continental) USA shipping on all orders of $100 USD or more!</div>
-            <img src="img.png" alt="" class="poster"> 
+            <img src="images/monster.png" alt="" class="poster" width="635" height="461"> 
         </section>
 
         <section class="category">
@@ -48,38 +48,47 @@
             <ul>
                 <li>
                     <a href="#">
-                       <img src="img.png" alt="">
+                       <img src="images/goods1.png" alt="" width="244" height="177">
                        <p>APPAREL KIDS</p>   
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                       <img src="img.png" alt="">
+                       <img src="images/goods2.png" alt="" width="208" height="244">
                        <p>HOLIDAY SHOP</p>   
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                       <img src="img.png" alt="">
+                       <img src="images/goods3.png" alt="" width="270" height="270">
                        <p>TOYS</p>   
                     </a>
                 </li>   
                 <li>
                     <a href="#">
-                       <img src="img.png" alt="">
+                       <img src="images/goods4.png" alt="" width="240" height="250">
                        <p>ACCESSORIES</p>   
                     </a>
                 </li>                
             </ul>
             <div>
-                <img src="img.png" alt="" class="arrow">
-                <img src="img.png" alt="" class="arrow">
+                <button>
+                    <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4"/>
+                        </svg>
+                </button>
+                <button>
+                    <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M2 2L15 15L2 28" stroke="#1E0606" stroke-width="4"/>
+                        </svg>
+                </button>
                 <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
             </div>
         </section>
         <section class="credit">
             <div class="photo">
                 <h2 class="hidden">photo</h2>
+                <img src="images/girl.jpg" alt="" width="480" height="559">
             </div>
             <div>
                 <h2>Delivery</h2>
@@ -96,10 +105,10 @@
         <section class="brands">
             <h2 class="hidden">brands</h2>
             <ul>
-                <li><img src="img.png" alt="">mail.ru</li>
-                <li><img src="img.png" alt="">apple</li>
-                <li><img src="img.png" alt="">eltex</li>
-                <li><img src="img.png" alt="">owox</li>
+                <li><img src="images/brands/brand1.png" alt="mail.ru" width="193" height="60"></li>
+                <li><img src="images/brands/brand2.png" alt="apple" width="179" height="61"></li>
+                <li><img src="images/brands/brand3.png" alt="eltex" width="216" height="46"></li>
+                <li><img src="images/brands/brand4.png" alt="owox" width="211" height="40"></li>
             </ul>
         </section>
         <section class="map">
@@ -114,7 +123,7 @@
             <div>
                 <h2>Contacts</h2>
                 <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <img src="img.png" alt="" class="map">
+                <img src="images/map.png" alt="geography-map" class="map" width="483" height="196">
             </div>
         </section>
     </main>
@@ -124,11 +133,11 @@
             <nav>
                 <ul>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li> 
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li> 
-                    <li><a href="#"></a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Design Services</a></li> 
+                    <li><a href="#">Featured On</a></li>
+                    <li><a href="#">2018 Holiday Catalog</a></li> 
+                    <li><a href="#">Shop By Designer</a></li>
                 </ul>
             </nav>
         </div>
@@ -137,11 +146,11 @@
             <nav>
                 <ul>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li> 
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li> 
-                    <li><a href="#"></a></li>
+                    <li><a href="#">Sale Exclusions</a></li>
+                    <li><a href="#">Shipping & Returns</a></li> 
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li> 
+                    <li><a href="#">Search</a></li>
                 </ul>
             </nav>
         </div>
@@ -179,7 +188,7 @@
         <hr>
         <div>
             <p>Company Rating</p>
-            <p style="background: #888;"><!-- звезды-->
+            <p class="stars" style="background: blue;">
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
@@ -194,7 +203,7 @@
                     </svg>
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
-                    </svg>                                                                                        
+                    </svg>                                                                                                                   
             </p>
         </div>
         <div>
