--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
 </head>
-<body bgcolor=#ffc>
+<body>
     <header>
         <svg width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
@@ -72,7 +72,7 @@
                     <p>APPAREL<br>ADULTS</p>   
                     </a>
                 </li> 	
-            <ul>
+            </ul>
             <div>   
                 <h2>Product Description</h2>
                 <p>
