--- a/toys.html
+++ b/toys.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Catalog</title>
+    <title>Toy for kids</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Catalog</a></li>
+                <li><a href="catalog.html">Catalog</a></li>
                 <li><a href="#">About Us</a></li> 
             </ul>
         </nav>
@@ -24,69 +24,78 @@
         <a href="#" class="">Contact Us</a>
     </header>  
     <main>
-        <section>
-            <h1>Category Products</h1>   
+        <section>  
+            <h1>Toy for kids</h1>
             <!-- picture bradcramps-->
             <a href="index.html">Home</a>
             <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.31229 0L0 1.17735L5.37541 6L0 10.8227L1.31229 12L8 6L1.31229 0Z" fill="#1E0606"/>
                 </svg>
-            <span>Catalog</span>
+            <a href="catalog.html">Catalog</a>
+            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.31229 0L0 1.17735L5.37541 6L0 10.8227L1.31229 12L8 6L1.31229 0Z" fill="#1E0606"/>
+                </svg>                
+            <span>Toys</span>
         </section> 
 
-        <section>
-            <ul>
-                <li>
-                    <a href="#">
-                    <img src="images/goods1.png" alt="" width="280" height="270">
-                    <p>APPAREL KIDS</p>   
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    <img src="images/goods2.png" alt="" width="280" height="270">
-                    <p>HOLIDAY SHOP</p>   
-                    </a>
-                </li>
-                <li>
-                    <a href="toys.html">
-                    <img src="images/goods3.png" alt="" width="280" height="270">
-                    <p>TOYS</p>   
-                    </a>
-                </li>   
-                <li>
-                    <a href="#">
-                    <img src="images/goods4.png" alt="" width="280" height="270">
-                    <p>ACCESSORIES</p>   
-                    </a>
-                </li> 
-                <li>
-                    <a href="#">
-                    <img src="images/goods5.png" alt="" width="280" height="270">
-                    <p>SALE</p>   
-                    </a>
-                </li> 				
-                <li>
-                    <a href="#">
-                    <img src="images/goods6.png" alt="" width="280" height="270">
-                    <p>APPAREL<br>ADULTS</p>   
-                    </a>
-                </li> 	
-            </ul>
-            <div>   
-                <h2>Product Description</h2>
-                <p>
-                Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.
-                </p>
-                <p>
-                A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.
-                </p>
-                <p>
-                The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.            
-                </p>
-            </div> 
+        <section class="select-bar">
+            <h1 class="hidden">Select Bar</h1>
+            <div class="cost">
+                <h2>Cost</h2>
+            </div>
+            <div class="color">
+                <h2>Color</h2>
+                <ul>
+                    <li><input type="checkbox" id="color-1"><label for="color-1">Black</label></li>
+                    <li><input type="checkbox" id="color-2"><label for="color-2">Blue</label></li>
+                    <li><input type="checkbox" id="color-3"><label for="color-3">Green</label></li>
+                    <li><input type="checkbox" id="color-4"><label for="color-4">White</label></li>
+                </ul>
+            </div>
+            <div class="delivery">
+                <h2>Delivery</h2>
+                <ul>
+                    <li><input type="radio" id="Delivery-1" name="radio" value="radio"><label for="Delivery-1">Free shipping</label></li>
+                    <li><input type="radio" id="Delivery-2" name="radio" value="radio"><label for="Delivery-2">Fast shipping</label></li>
+                </ul>
+            </div>
+            <div class="amount">
+                <h2>Amount</h2>
+                <ul>
+                    <li>0-5</li>
+                    <li>10-20</li>
+                    <li>20-50</li>
+                </ul>
+            </div>
+            <button>APPLY</button>
         </section>
-    </main>  
+        <section class="toys-bar">
+            <h2 class="hidden">Toys</h2>
+            <img src="images/toy1.jpg" alt="" width="380" height="385">
+            <img src="images/toy2.jpg" alt="" width="380" height="385">
+            <img src="images/toy3.jpg" alt="" width="380" height="385">
+            <img src="images/toy4.jpg" alt="" width="380" height="385">
+            <img src="images/toy5.jpg" alt="" width="380" height="385">
+            <img src="images/toy6.jpg" alt="" width="380" height="382">
+        </section>
+
+        <section class="pagination-bar">
+            <h2 class="hidden">Pagination</h2>
+            <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
+                </svg>
+            <ul>
+                <li class="pagination-selected">1</li>
+                <li class="pagination">2</li>
+                <li class="pagination">3</li>
+                <li class="pagination">4</li>
+            </ul>    
+
+            <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2 2L15 15L2 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
+                </svg>
+        </section>    
+    </main>
     <footer>
         <div>
             <h2>Navigation</h2>
@@ -170,9 +179,8 @@
             Copyright © 2018 Dlk • Design Life Kids
         </div>
         <div>
-            Web Design — <a href="#">Direct Line Development</a>
+            Web Design — <a href="https://dlacademy.ru/">Direct Line Development</a>
         </div>        
-    </footer>
+    </footer>    
 </body>
 </html>
-    
