добавил муляж ползунка

--- a/toys.html
+++ b/toys.html
@@ -42,6 +42,14 @@
             <h1 class="hidden">Select Bar</h1>
             <div class="cost">
                 <h2>Cost</h2>
+                <svg width="207" height="52" viewBox="0 0 207 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect opacity="0.5" x="5" y="10" width="188" height="4" fill="black"/>
+                    <rect x="5" y="10" width="46" height="4" fill="#C29974"/>
+                    <circle cx="51" cy="12" r="12" fill="#C29974"/>
+                    <circle cx="51" cy="12" r="3.65217" fill="white"/>
+                    </svg>
+                <div>0</div>
+                <div>500</div>
             </div>
             <div class="color">
                 <h2>Color</h2>
