--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
     <header>
-        <svg width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
-            <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
-            <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/>
-            </svg>            
+        <a href="#" class="logo">
+            <svg width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
+                <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
+                <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/>
+                </svg>    
+        </a>            
         <nav>
             <ul>
                 <li><a href="#">Blog</a></li>
@@ -18,20 +20,22 @@
                 <li><a href="#">About Us</a></li> 
             </ul>
         </nav>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M14.3651 3.26001C10.9451 3.26001 8.16509 6.08001 8.16509 9.52001C8.16509 10.98 8.6651 12.3 9.4851 13.38L3.6051 19.32C3.2651 19.68 3.2651 20.24 3.6051 20.58C3.7851 20.76 4.0051 20.84 4.2251 20.84C4.4651 20.84 4.6851 20.76 4.8651 20.58L10.7451 14.62C11.7651 15.36 13.0051 15.78 14.3451 15.78C17.7651 15.78 20.5451 12.96 20.5451 9.52001C20.5651 6.06001 17.7851 3.26001 14.3651 3.26001ZM14.3651 14.2C11.8251 14.2 9.76509 12.1 9.76509 9.52001C9.76509 6.94001 11.8251 4.84001 14.3651 4.84001C16.9051 4.84001 18.9651 6.94001 18.9651 9.52001C18.9651 12.1 16.9051 14.2 14.3651 14.2ZM17.4651 9.60001C17.4251 9.94001 17.1251 10.2 16.7851 10.2C16.7451 10.2 16.7251 10.2 16.6851 10.2C16.3051 10.14 16.0451 9.80001 16.0851 9.42001C16.2251 8.38001 15.0651 7.84001 15.0051 7.82001C14.6651 7.66001 14.5051 7.24001 14.6651 6.90001C14.8251 6.56001 15.2251 6.40001 15.5851 6.54001C15.6651 6.56001 17.7451 7.52001 17.4651 9.60001ZM16.0051 11.12C16.1451 11.26 16.2451 11.48 16.2451 11.68C16.2451 11.9 16.1651 12.1 16.0051 12.24C15.8651 12.38 15.6451 12.48 15.4451 12.48C15.2451 12.48 15.0251 12.4 14.8851 12.24C14.7451 12.1 14.6451 11.88 14.6451 11.68C14.6451 11.48 14.7251 11.26 14.8851 11.12C15.0251 10.98 15.2451 10.88 15.4451 10.88C15.6451 10.88 15.8451 10.96 16.0051 11.12Z" fill="#1E0606"/>
-            </svg>            
+        <a href="#">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.3651 3.26001C10.9451 3.26001 8.16509 6.08001 8.16509 9.52001C8.16509 10.98 8.6651 12.3 9.4851 13.38L3.6051 19.32C3.2651 19.68 3.2651 20.24 3.6051 20.58C3.7851 20.76 4.0051 20.84 4.2251 20.84C4.4651 20.84 4.6851 20.76 4.8651 20.58L10.7451 14.62C11.7651 15.36 13.0051 15.78 14.3451 15.78C17.7651 15.78 20.5451 12.96 20.5451 9.52001C20.5651 6.06001 17.7851 3.26001 14.3651 3.26001ZM14.3651 14.2C11.8251 14.2 9.76509 12.1 9.76509 9.52001C9.76509 6.94001 11.8251 4.84001 14.3651 4.84001C16.9051 4.84001 18.9651 6.94001 18.9651 9.52001C18.9651 12.1 16.9051 14.2 14.3651 14.2ZM17.4651 9.60001C17.4251 9.94001 17.1251 10.2 16.7851 10.2C16.7451 10.2 16.7251 10.2 16.6851 10.2C16.3051 10.14 16.0451 9.80001 16.0851 9.42001C16.2251 8.38001 15.0651 7.84001 15.0051 7.82001C14.6651 7.66001 14.5051 7.24001 14.6651 6.90001C14.8251 6.56001 15.2251 6.40001 15.5851 6.54001C15.6651 6.56001 17.7451 7.52001 17.4651 9.60001ZM16.0051 11.12C16.1451 11.26 16.2451 11.48 16.2451 11.68C16.2451 11.9 16.1651 12.1 16.0051 12.24C15.8651 12.38 15.6451 12.48 15.4451 12.48C15.2451 12.48 15.0251 12.4 14.8851 12.24C14.7451 12.1 14.6451 11.88 14.6451 11.68C14.6451 11.48 14.7251 11.26 14.8851 11.12C15.0251 10.98 15.2451 10.88 15.4451 10.88C15.6451 10.88 15.8451 10.96 16.0051 11.12Z" fill="#1E0606"/>
+                </svg>     
+        </a>           
         <a href="#" class="">Contact Us</a>
     </header>   
     <main>
-        <section class="slyder">
+        <section class="slider">
             <div>
                 <p class="counter">01</p>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
+                    <li><button></button></li>
                 </ul>
             </div>
             <div>
@@ -59,7 +63,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="toys.html">
                        <img src="images/goods3.png" alt="" width="280" height="270">
                        <p>TOYS</p>   
                     </a>
@@ -87,7 +91,7 @@
         </section>
         <section class="credit">
             <div class="photo">
-                <h2 class="hidden">photo</h2>
+                <h2 class="visually-hidden">photo</h2>
                 <img src="images/girl.jpg" alt="" width="480" height="559">
             </div>
             <div>
@@ -103,7 +107,7 @@
             </div>
         </section>
         <section class="brands">
-            <h2 class="hidden">brands</h2>
+            <h2 class="visually-hidden">brands</h2>
             <ul>
                 <li><img src="images/brands/brand1.png" alt="mail.ru" width="193" height="60"></li>
                 <li><img src="images/brands/brand2.png" alt="apple" width="179" height="61"></li>
@@ -156,7 +160,7 @@
         </div>
         <div>
             <h2>Connect</h2>
-            <input type="text" class="input" placeholder="Email"> 
+            <input type="email" class="input" placeholder="Email"> 
             <input type="submit" class="submit" value="JOIN">
             <ul class="social">
                 <li><a href="#" target="_blank">
@@ -188,7 +192,7 @@
         <hr>
         <div>
             <p>Company Rating</p>
-            <p class="stars" style="background: blue;">
+            <p class="stars">
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
@@ -214,35 +218,42 @@
         </div>        
     </footer>
 
-    <div class="modal__form">
-        <h2 class="hidden">Modal Window</h2>
-        <form action="" method="POST">
-			<fieldset>
-				<div>
-					<label for="input-name">Name</label>
-					<input type="text" id="input-name" placeholder="Ivan Ivanov">
-				</div>
-			</fieldset>
-			<fieldset>
-				<div>
-					<label for="input-phone">Phone</label>
-					<input type="tel" id="input-phone">
-				</div>
-				<div>
-					<label for="input-email">Email</label>
-					<input type="email" id="input-email">
-				</div>
-			</fieldset>
-			<fieldset>
-				<label for="input-message">Message</label>
-				<textarea id="input-message">Message</textarea>
-			</fieldset>
+    <div class="modal-form">
+        <h2 class="visually-hidden">Modal Window</h2>
+        <form action="#" method="POST">
+            <fieldset>
+                <div>
+                    <label for="input-name">Name</label>
+                    <input type="text" id="input-name" placeholder="Ivan Ivanov">
+                </div>
+            </fieldset>
+            <fieldset>
+                <div>
+                    <label for="input-phone">Phone</label>
+                    <input type="tel" id="input-phone">
+                </div>
+                <div>
+                    <label for="input-email">Email</label>
+                    <input type="email" id="input-email">
+                </div>
+            </fieldset>
+            <fieldset>
+                <label for="input-message">Message</label>
+                <textarea id="input-message">Message</textarea>
+            </fieldset>
             <fieldset>
                 <input type="checkbox" id="input-consent">
                 <label for="input-consent">By clicking on the button, you consent to the processing of your personal data</label>
             </fieldset>
             <input type="submit" value="SUBMIT">    
         </form>
+    </div>
+    <div class="cross">
+        <button>
+            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.21902 14.6113C1.70029 15.1295 0.893368 15.1295 0.374636 14.6113C0.11527 14.3522 -6.13512e-07 14.0355 -5.9841e-07 13.69C-5.83308e-07 13.3445 0.11527 13.0278 0.374636 12.7687L5.64841 7.5L0.374637 2.23127C0.115271 1.97215 -7.23629e-08 1.65547 -5.72611e-08 1.30998C-4.21593e-08 0.964491 0.115271 0.647806 0.374637 0.388689C0.893369 -0.129545 1.70029 -0.129545 2.21902 0.388689L7.4928 5.65738L12.7666 0.38869C13.2853 -0.129545 14.0922 -0.129545 14.611 0.38869C15.1297 0.906924 15.1297 1.71304 14.611 2.23127L9.33718 7.5L14.611 12.7687C15.1297 13.287 15.1297 14.0931 14.611 14.6113C14.0922 15.1295 13.2853 15.1295 12.7666 14.6113L7.4928 9.34258L2.21902 14.6113Z" fill="blue"/>
+            </svg>
+        </button>           
     </div>
 </body>
 </html>
