Убрал стрелки, сделал странице единственный h1

--- a/toys.html
+++ b/toys.html
@@ -24,22 +24,15 @@
         <a href="#" class="">Contact Us</a>
     </header>  
     <main>
-        <section>  
+        <section class="breadcrumbs">  
             <h1>Toy for kids</h1>
-            <!-- picture bradcramps-->
             <a href="index.html">Home</a>
-            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.31229 0L0 1.17735L5.37541 6L0 10.8227L1.31229 12L8 6L1.31229 0Z" fill="#1E0606"/>
-                </svg>
-            <a href="catalog.html">Catalog</a>
-            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.31229 0L0 1.17735L5.37541 6L0 10.8227L1.31229 12L8 6L1.31229 0Z" fill="#1E0606"/>
-                </svg>                
+            <a href="catalog.html">Catalog</a>               
             <span>Toys</span>
         </section> 
 
         <section class="select-bar">
-            <h1 class="hidden">Select Bar</h1>
+            <h2 class="visually-hidden">Select Bar</h2>
             <div class="cost">
                 <h2>Cost</h2>
                 <svg width="207" height="52" viewBox="0 0 207 52" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +71,7 @@
             <button>APPLY</button>
         </section>
         <section class="toys-bar">
-            <h2 class="hidden">Toys</h2>
+            <h2 class="visually-hidden">Toys</h2>
             <img src="images/toy1.jpg" alt="" width="380" height="385">
             <img src="images/toy2.jpg" alt="" width="380" height="385">
             <img src="images/toy3.jpg" alt="" width="380" height="385">
@@ -88,7 +81,7 @@
         </section>
 
         <section class="pagination-bar">
-            <h2 class="hidden">Pagination</h2>
+            <h2 class="visually-hidden">Pagination</h2>
             <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
                 </svg>
@@ -106,7 +99,7 @@
     </main>
     <footer>
         <div>
-            <h2>Navigation</h2>
+            <h3>Navigation</h3>
             <nav>
                 <ul>
                     <li><a href="#">About Us</a></li>
@@ -119,7 +112,7 @@
             </nav>
         </div>
         <div>
-            <h2>Customer Information</h2>
+            <h3>Customer Information</h3>
             <nav>
                 <ul>
                     <li><a href="#">Contact Us</a></li>
@@ -132,7 +125,7 @@
             </nav>
         </div>
         <div>
-            <h2>Connect</h2>
+            <h3>Connect</h3>
             <input type="text" class="input" placeholder="Email"> 
             <input type="submit" class="submit" value="JOIN">
             <ul class="social">
@@ -187,7 +180,7 @@
             Copyright © 2018 Dlk • Design Life Kids
         </div>
         <div>
-            Web Design — <a href="https://dlacademy.ru/">Direct Line Development</a>
+            Web Design — <a href="#">Direct Line Development</a>
         </div>        
     </footer>    
 </body>
