--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Toy for kids</title>
+    <title>Contact Us</title>
 </head>
 <body>
     <header>
@@ -11,8 +11,8 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
                 <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
                 <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/>
-            </svg>   
-        </a>             
+            </svg>    
+        </a>            
         <nav>
             <ul>
                 <li><a href="#">Blog</a></li>
@@ -23,94 +23,52 @@
         <a href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.3651 3.26001C10.9451 3.26001 8.16509 6.08001 8.16509 9.52001C8.16509 10.98 8.6651 12.3 9.4851 13.38L3.6051 19.32C3.2651 19.68 3.2651 20.24 3.6051 20.58C3.7851 20.76 4.0051 20.84 4.2251 20.84C4.4651 20.84 4.6851 20.76 4.8651 20.58L10.7451 14.62C11.7651 15.36 13.0051 15.78 14.3451 15.78C17.7651 15.78 20.5451 12.96 20.5451 9.52001C20.5651 6.06001 17.7851 3.26001 14.3651 3.26001ZM14.3651 14.2C11.8251 14.2 9.76509 12.1 9.76509 9.52001C9.76509 6.94001 11.8251 4.84001 14.3651 4.84001C16.9051 4.84001 18.9651 6.94001 18.9651 9.52001C18.9651 12.1 16.9051 14.2 14.3651 14.2ZM17.4651 9.60001C17.4251 9.94001 17.1251 10.2 16.7851 10.2C16.7451 10.2 16.7251 10.2 16.6851 10.2C16.3051 10.14 16.0451 9.80001 16.0851 9.42001C16.2251 8.38001 15.0651 7.84001 15.0051 7.82001C14.6651 7.66001 14.5051 7.24001 14.6651 6.90001C14.8251 6.56001 15.2251 6.40001 15.5851 6.54001C15.6651 6.56001 17.7451 7.52001 17.4651 9.60001ZM16.0051 11.12C16.1451 11.26 16.2451 11.48 16.2451 11.68C16.2451 11.9 16.1651 12.1 16.0051 12.24C15.8651 12.38 15.6451 12.48 15.4451 12.48C15.2451 12.48 15.0251 12.4 14.8851 12.24C14.7451 12.1 14.6451 11.88 14.6451 11.68C14.6451 11.48 14.7251 11.26 14.8851 11.12C15.0251 10.98 15.2451 10.88 15.4451 10.88C15.6451 10.88 15.8451 10.96 16.0051 11.12Z" fill="#1E0606"/>
-            </svg>  
-        </a>              
+            </svg>     
+        </a>           
         <a href="#" class="">Contact Us</a>
-    </header>  
+    </header>     
     <main>
-        <section class="breadcrumbs">  
-            <h1>Toy for kids</h1>
-            <a href="index.html">Home</a>
-            <a href="catalog.html">Catalog</a>               
-            <span>Toys</span>
-        </section> 
-
-        <section class="select-bar">
-            <h2 class="visually-hidden">Select Bar</h2>
-            <div class="cost">
-                <h2>Cost</h2>
-                <div tabindex="0">
-                    <svg width="207" height="52" viewBox="0 0 207 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect opacity="0.5" x="5" y="10" width="188" height="4" fill="black"/>
-                        <rect x="5" y="10" width="46" height="4" fill="#C29974"/>
-                        <circle cx="51" cy="12" r="12" fill="#C29974"/>
-                        <circle cx="51" cy="12" r="3.65217" fill="white"/>
-                    </svg>
-                </div>
-                <div>0</div>
-                <div>500</div>
-            </div>
-            <div class="color">
-                <h2>Color</h2>
-                <ul>
-                    <li><input type="checkbox" id="color-1"><label for="color-1">Black</label></li>
-                    <li><input type="checkbox" id="color-2"><label for="color-2">Blue</label></li>
-                    <li><input type="checkbox" id="color-3"><label for="color-3">Green</label></li>
-                    <li><input type="checkbox" id="color-4"><label for="color-4">White</label></li>
-                </ul>
-            </div>
-            <div class="delivery">
-                <h2>Delivery</h2>
-                <ul>
-                    <li>
-                        <input type="radio" id="Delivery-1" name="radio" value="radio">
-                        <label for="Delivery-1">Free shipping</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="Delivery-2" name="radio" value="radio">
-                        <label for="Delivery-2">Fast shipping</label>
-                    </li>
-                </ul>
-            </div>
-            <div class="amount">
-                <h2>Amount</h2>
-                <ul>
-                    <li>0-5</li>
-                    <li>10-20</li>
-                    <li>20-50</li>
-                </ul>
-            </div>
-            <button>APPLY</button>
+        <section class="breadcrumbs">
+            <h1>CONTACT US</h1> 
+			<a href="#">Home</a>
+			<span>Contact Us</span>
         </section>
-        <section class="toys-bar">
-            <h2 class="visually-hidden">Toys</h2>
-            <img src="images/toy1.jpg" alt="" width="380" height="385">
-            <img src="images/toy2.jpg" alt="" width="380" height="385">
-            <img src="images/toy3.jpg" alt="" width="380" height="385">
-            <img src="images/toy4.jpg" alt="" width="380" height="385">
-            <img src="images/toy5.jpg" alt="" width="380" height="385">
-            <img src="images/toy6.jpg" alt="" width="380" height="382">
+        
+        <section>
+            <h2 class="visually-hidden">form</h2>
+            <form action="#" method="POST">
+                <fieldset>
+                    <div>
+                        <label for="input-name">Name</label>
+                        <input type="text" id="input-name" placeholder="Ivan Ivanov">
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div>
+                        <label for="input-phone">Phone</label>
+                        <input type="tel" id="input-phone">
+                    </div>
+                    <div>
+                        <label for="input-email">Email</label>
+                        <input type="email" id="input-email">
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <label for="input-message">Message</label>
+                    <textarea id="input-message">Message</textarea>
+                </fieldset>
+                <fieldset>
+                    <input type="checkbox" id="input-consent">
+                    <label for="input-consent">By clicking on the button, you consent to the processing of your personal data</label>
+                </fieldset>
+                <input type="submit" value="SUBMIT">    
+            </form>
+            <div class="form-description">
+                <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
+                <p>Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible.</p>
+                <p class="experts">An expert is waiting to help you!</p>
+            </div>
         </section>
-
-        <section class="pagination-bar">
-            <h2 class="visually-hidden">Pagination</h2>
-            <button>
-                <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
-                </svg>
-            </button>
-            <ul>
-                <li class="pagination-selected"><button>1</button></li>
-                <li class="pagination"><button>2</button></li>
-                <li class="pagination"><button>3</button></li>
-                <li class="pagination"><button>4</button></li>
-            </ul>    
-            <button>
-                <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M2 2L15 15L2 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
-                </svg>
-            </button>
-        </section>    
     </main>
     <footer>
         <div>
