--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <svg width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
                 <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
@@ -32,9 +32,11 @@
     </header>  
     <main>
         <section class="breadcrumbs">
-            <h1>Category Products</h1>   
-            <a href="index.html">Home</a>
-            <span>Catalog</span>
+            <h1>Category Products</h1>
+            <div class="breadcrumbs-items">
+                <a href="index.html">Home</a>
+                <span>Catalog</span>
+            </div>
         </section> 
 
         <section>
