css для слайдера

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@300;600;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Main Page</title>
 </head>
 <body>
@@ -34,7 +35,7 @@
     <main class="main">
         <section class="slider container">
             <div>
-                <p class="counter">01</p>
+                <p class="slider-counter">01</p>
                 <ul>
                     <li><button></button></li>
                     <li><button></button></li>
@@ -42,13 +43,13 @@
                     <li><button></button></li>
                 </ul>
             </div>
-            <div>
+            <div class="slider-text">
                 <h1>THE OOH NOO COLLECTION</h1>
                 <p>Designed in Slovenia</p>
-                <a href="#" class="button">EXPLORE NOW</a>
+                <a href="#" class="slider-btn">EXPLORE NOW</a>
             </div>
-            <div>Free (continental) USA shipping on all orders of $100 USD or more!</div>
-            <img src="images/monster.png" alt="" class="poster" width="635" height="461"> 
+			<img src="images/monster.png" alt="" class="poster" width="635" height="489"> 
+            <div class="slider-footer">Free (continental) USA shipping on all orders of $100 USD or more!</div>         
         </section>
 
         <section class="category container">
