добавил alt картинкам

--- a/toy.html
+++ b/toy.html
@@ -45,7 +45,7 @@
                 <span>Toys</span>
             </div>
         </section> 
-<!-- ----------------------------------- -->	
+	
         <section class="select-bar">
             <h2 class="visually-hidden">Select Bar</h2>
 			<div class="bar container">
@@ -70,15 +70,15 @@
 									<label for="color-1">Black</label>
 								</li>
 								<li>
-									<input type="checkbox"  class="input visually-hidden"id="color-2">
+									<input type="checkbox"  class="input visually-hidden" id="color-2">
 									<label for="color-2" >Blue</label>
 								</li>
 								<li>
-									<input type="checkbox"  class="input visually-hidden"id="color-3">
+									<input type="checkbox"  class="input visually-hidden" id="color-3">
 									<label for="color-3">Green</label>
 								</li>
 								<li>
-									<input type="checkbox"  class="input visually-hidden"id="color-4">
+									<input type="checkbox"  class="input visually-hidden" id="color-4">
 									<label for="color-4">White</label>
 								</li>
 							</ul>
@@ -125,7 +125,7 @@
 				<div class="holder">
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy1.jpg">
+							<img src="images/toy1.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -137,7 +137,7 @@
 				<div class="holder">
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy2.jpg">
+							<img src="images/toy2.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -149,7 +149,7 @@
 				<div class="holder">
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy3.jpg">
+							<img src="images/toy3.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -161,7 +161,7 @@
 				<div class="holder">
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy4.jpg">
+							<img src="images/toy4.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -173,7 +173,7 @@
 				<div class="holder">    
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy5.jpg">
+							<img src="images/toy5.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -185,7 +185,7 @@
 				<div class="holder">    
 					<a href="#">
 						<div class="wrapper-toy">
-							<img src="images/toy6.jpg">
+							<img src="images/toy6.jpg" alt="">
 							<div class="background"></div>
 							<p class="aside">learn more</p>
 						</div>
@@ -217,19 +217,7 @@
 				</button>
 			</div>
         </section> 
-	
-<!-- ----------------------------------- -->	
-	
-<!-- ----------------------------------- -->	
-	
-<!-- ----------------------------------- -->	
-	
-<!-- ----------------------------------- -->	
-	
-	
-	
-	
-	
+		
 	</main>
     <footer class="footer-section">
         <section class="footer container">
