исправил файл toys.html

--- a/toys.html
+++ b/toys.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@300;600;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/toys.min.css">
+	<link rel="stylesheet" href="css/toys.css">
     <title>Toys</title>
 </head>
 <body>
@@ -59,24 +59,24 @@
 					</div>
 					<div class="color">
 						<h2>Color</h2>
-							<ul class="group-input bar-ul">
-								<li>
-									<input type="checkbox" class="input visually-hidden" id="color-1">
-									<label for="color-1">Black</label>
-								</li>
-								<li>
-									<input type="checkbox"  class="input visually-hidden" id="color-2">
-									<label for="color-2" >Blue</label>
-								</li>
-								<li>
-									<input type="checkbox"  class="input visually-hidden" id="color-3">
-									<label for="color-3">Green</label>
-								</li>
-								<li>
-									<input type="checkbox"  class="input visually-hidden" id="color-4">
-									<label for="color-4">White</label>
-								</li>
-							</ul>
+						<ul class="group-input bar-ul">
+							<li>
+								<input type="checkbox" class="input visually-hidden" id="color-1">
+								<label for="color-1">Black</label>
+							</li>
+							<li>
+								<input type="checkbox"  class="input visually-hidden" id="color-2">
+								<label for="color-2" >Blue</label>
+							</li>
+							<li>
+								<input type="checkbox"  class="input visually-hidden" id="color-3">
+								<label for="color-3">Green</label>
+							</li>
+							<li>
+								<input type="checkbox"  class="input visually-hidden" id="color-4">
+								<label for="color-4">White</label>
+							</li>
+						</ul>
 					</div>
 					<div class="delivery">
 						<h2>Delivery</h2>
@@ -108,7 +108,7 @@
 							</li>										
 						</ul>
 					</div>
-					<button type="submit" class="btn2">Apply</button>
+					<button type="submit" class="btn2 button">Apply</button>
 				</form>
 			</div>
         </section>
